--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   mongo_dart: ^0.10.3
   faker: ^2.0.0
   salomon_bottom_bar: ^3.3.2
+  video_player: ^2.5.0
+  chewie: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +61,7 @@ flutter:
     - assets/icon/
     - assets/image/
     - assets/fonts/
+    - assets/video/test.mp4
 
   fonts:
     - family: Italianno
